--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,83 @@
+altair==5.5.0
+asttokens==3.0.1
+attrs==25.4.0
+backcall==0.2.0
+beautifulsoup4==4.14.2
+bleach==6.3.0
+blinker==1.9.0
+cachetools==6.2.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
+cryptography==46.0.3
+decorator==5.2.1
+defusedxml==0.7.1
+docopt==0.6.2
+executing==2.2.1
+fastjsonschema==2.21.2
+gitdb==4.0.12
+GitPython==3.1.45
+idna==3.11
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter_client==8.6.3
+jupyter_core==5.9.1
+jupyterlab_pygments==0.3.0
+MarkupSafe==3.0.3
+matplotlib-inline==0.2.1
+mistune==3.1.4
+narwhals==2.12.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+numpy==2.3.5
+packaging==25.0
+pandas==2.3.3
+pandocfilters==1.5.1
+parso==0.8.5
+patsy==1.0.2
+pickleshare==0.7.5
+pillow==12.0.0
+pipreqs==0.5.0
+platformdirs==4.5.0
+plotly==6.4.0
+plotly-express==0.4.1
+prompt_toolkit==3.0.52
+protobuf==6.33.1
+pure_eval==0.2.3
+pyarrow==21.0.0
+pycparser==2.23
+pydeck==0.9.1
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==27.1.0
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.29.0
+scipy==1.16.3
+six==1.17.0
+smmap==5.0.2
+soupsieve==2.8
+stack-data==0.6.3
+statsmodels==0.14.5
+streamlit==1.51.0
+tenacity==9.1.2
+tinycss2==1.4.0
+tinytuya==1.17.4
+toml==0.10.2
+tornado==6.5.2
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+wcwidth==0.2.14
+webencodings==0.5.1
+yarg==0.1.9
 
